Refactor simulation core for immutability and clarity